Fixed content being off center on smaller screen, added to content

--- a/css/indexstyles.css
+++ b/css/indexstyles.css
@@ -120,7 +120,6 @@ article {
     /*border: 1px solid red;*/
     width: 100%;
     margin: 0 10px 10px 0;
-    padding: 0 0 0 60px;
 }
 
 .Job, .Skill, .Project{
